<resources>
    <string name="app_name">GoodNight</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hotel_name">Hotel Name</string>
    <string name="hotel_erea">Hotel Erea</string>
    <string name="hotel_status">Hotel Status</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_log_in">LogInActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_login_uber">LoginUber</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="hotel_name_detail">Hotel Name</string>
    <string name="hotel_descroption">Description</string>
    <string name="hotel_address">hotel address</string>
    <string name="hotel_price">price</string>
    <string name="android_check">Checkin -- Checkout</string>
    <string name="login_button">LOG IN WITH UBER</string>
    <string name="good_night_name">GoodNight</string>
    <string name="sub_title">Smarter than others with GoodNight</string>
</resources>