<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scroll_view_detail"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true"
    android:layout_margin="20dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:id="@+id/LinearLayout"
        android:orientation="vertical"
        android:layout_height="match_parent"
        android:layout_width="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:id="@+id/hotel_image_large"
            android:src="@mipmap/ic_action_picture"
            android:scaleType="fitXY"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hotel_name_detail"
            android:id="@+id/hotel_name_detail"
            android:textSize="35sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/hotel_erea_detail"
            android:text="@string/hotel_erea"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/blue"
            android:text="Register"
            android:textColor="@android:color/white"
            android:layout_gravity="right"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/hotel_price"
            android:text="@string/hotel_price"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/checkin_checkout"
            android:text="@string/android_check"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/shop_address"
            android:text="@string/hotel_address"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hotel_descroption"
            android:id="@+id/hotel_description"
            android:textSize="20sp"/>
        
    </LinearLayout>

</ScrollView>

