<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context="l.appprino.com.goodnight.OAuth.LoginUberActivity"
    android:background="@mipmap/uber_image"
    >

    <Button
        android:id="@+id/oauthButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_button"
        android:layout_marginBottom="97dp"
        android:background="#00BCD4"
        android:textColor="@android:color/white"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/good_night_name"
        android:textColor="@android:color/white"
        android:textSize="50sp"
        android:textStyle="bold"
        android:id="@+id/title"
        android:layout_marginBottom="168dp"
        android:layout_above="@+id/oauthButton"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sub_title"
        android:id="@+id/sub_title"
        android:textColor="@android:color/white"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>
