<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:cardCornerRadius="2dp"
        app:cardElevation="2dp"
        android:layout_marginBottom="@dimen/cardMarginVertical"
        android:layout_marginLeft="@dimen/cardMarginHorizontal"
        android:layout_marginRight="@dimen/cardMarginHorizontal"
        android:layout_marginTop="@dimen/cardMarginVertical"
        app:cardPreventCornerOverlap="false"
        app:contentPadding="0dp">
        <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white">
            <ImageView
                android:id="@+id/hotel_image"
                android:layout_width="75dp"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:src="@mipmap/ic_action_picture" />

            <TextView
                android:id="@+id/shop_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/hotel_image"
                android:text="@string/hotel_name"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/hotel_erea"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hotel_erea"
                android:layout_alignLeft="@+id/shop_name"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/shop_name" />

            <TextView
                android:id="@+id/shop_address_list"
                android:layout_width="wrap_content"
                android:text="@string/hotel_status"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"/>

        </RelativeLayout>
    </android.support.v7.widget.CardView>

</FrameLayout>